--- a/style.css
+++ b/style.css
@@ -5,3 +5,81 @@
     box-sizing: border-box;
     /*hello*/
 }
+
+body{
+    background: #002339;
+    color: #fff;
+}
+
+.container{
+    padding: 150px;
+    font-size:15px;
+}
+
+.container h1 span{
+    color:rgb(52, 103, 52);
+    border-bottom: 4px solid rgb(52, 103, 52);
+    padding-bottom: 7px;
+    margin-left: 20px;
+}
+
+.box{
+    width: 70%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    background: white;
+    color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 26px 20px;
+    border-radius: 20px;
+}
+
+.box img{
+    width: 30px;
+    cursor: pointer;
+}
+
+.box input{
+    border: 0;
+    outline: 0;
+    font-size: 25px;
+}
+
+.btn{
+    outline: 0;
+    border: 0;
+    font-size: 15px;
+    background-color: rgb(52, 103, 52); 
+    color: #fff;
+    display: flex;
+    align-items: center;   
+    justify-content: center;
+    padding: 14px 20px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.btn img{
+    width: 28px;
+    margin-right: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
